--- a/starter/templates/network/ingress.yaml
+++ b/starter/templates/network/ingress.yaml
@@ -4,13 +4,22 @@ kind: Ingress
 metadata:
   name: {{ default (include "helper.fullname" .) .Values.ingress.name }}
   namespace: {{ .Release.Namespace }}
-  {{- if or .Values.ingress.annotations .Values.commonAnnotations .Values.ingress.certManager }}
+  {{- if or .Values.ingress.annotations .Values.commonAnnotations .Values.ingress.certManager.create .Values.ingress.externalDns }}
   annotations:
     {{- if .Values.commonAnnotations }}
     {{- include "helper.annotations" (dict "annotations" .Values.commonAnnotations "context" $) | trim | nindent 4 }}
     {{- end }}
     {{- if .Values.ingress.annotations }}
     {{- include "helper.annotations" (dict "annotations" .Values.ingress.annotations "context" $) | trim | nindent 4 }}
+    {{- end }}
+    {{- if and .Values.ingress.certManager.create .Values.ingress.certManager.issuerName }}
+    cert-manager.io/issuer: {{ .Values.ingress.certManager.issuerName }}
+    {{- end }}
+    {{- if and .Values.ingress.certManager.create .Values.ingress.certManager.clusterIssuerName }}
+    cert-manager.io/cluster-issuer: {{ .Values.ingress.certManager.clusterIssuerName }}
+    {{- end }}
+    {{- if .Values.ingress.externalDns }}
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.ingress.hostname }}
     {{- end }}
   {{- end }}
   labels: {{- include "helper.labels" . | nindent 4 }}
